--- a/es2/index.html
+++ b/es2/index.html
@@ -66,19 +66,19 @@
     </div>
       
 
-    <h2 class="text-xl text-black mt-8 font-inria">Bem-Vindo ao SoftLean!</h2>
+    <h2 class="text-xl text-black mt-2 font-inria">Bem-Vindo ao SoftLean!</h2>
     
-    <form class="w-full mt-6">
+    <form class="w-full mt-4">
       <div class="mb-4">
-        <label for="username" class="block text-sm text-black mb-1 font-inria">Usuário:</label>
+        <label for="username" class="block text-black mb-1 font-inria">Usuário:</label>
         <input type="text" id="username" class="w-full bg-transparent border-b border-black text-black font-inria focus:outline-none py-1">
       </div>
       <div class="mb-6">
-        <label for="password" class="block text-sm text-black mb-1 font-inria">Senha:</label>
+        <label for="password" class="block  text-black mb-1 font-inria">Senha:</label>
         <input type="password" id="password" class="w-full bg-transparent border-b border-black text-black font-inria focus:outline-none py-1">
       </div>
-      <a href="#" class="block text-xs text-black  hover:underline mb-6 font-inria">Não tem uma conta? <span class="text-[#1A01FD]">Clique aqui</span></a>
-      <button type="submit" class="w-full bg-custom-button text-white py-2 rounded-lg text-lg font-semibold hover:bg-gray-800 transition-colors font-inria">
+      <a href="#" class="block  text-black  hover:underline mb-6 font-inria">Não tem uma conta? <span class="text-[#1A01FD]">Clique aqui</span></a>
+      <button type="submit" class="w-full bg-custom-button text-white py-2 rounded-lg text-lg font-semibold  font-inria">
         login
       </button>
     </form>
